# node-crypto-rs

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.mjs
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: aes_gcm.rs  lib.rs
test/: aes.bench.ts  aes.test.ts  index.test.ts
