[package]
edition = "2021"
name = "crypto-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "compat-mode",
] }
napi-derive = { version = "2.12.2", default-features = false, features = [
  "compat-mode",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
