[package]
edition = "2021"
name = "node-crypto-rs"
version = "0.0.7"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.5.2", default-features = false, features = [
  "napi4",
  "compat-mode",
] }
napi-derive = { version = "3.3.3", default-features = false, features = [
  "compat-mode",
] }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
